# MyNote

./: .gitignore  MyNote方案.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
server/: .env.example  .env.pkg  package-lock.json  package.json
server/src/: app.ts  config.ts
server/src/middleware/: auth.ts
server/src/routes/: auth.ts  note.ts  sync.ts  user.ts
server/src/services/: db.ts
server/src/types/: index.ts
server/src/utils/: jwt.ts
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: keyboard_hook.rs  main.rs  mouse_hook.rs  no_activate_window.rs  paste_executor.rs
src-tauri/src/commands/: clipboard.rs  mod.rs  note.rs
src-tauri/src/domain/: node.rs  user.rs
src-tauri/src/infrastructure/: database.rs
src-tauri/src/services/: clipboard_monitor.rs  clipboard_service.rs  mod.rs
src/components/clipboard/: ClipboardPanel.vue
src/components/common/: Editor.vue  ListView.vue  Sidebar.vue
src/components/dialog/: LoginDialog.vue  SettingsDialog.vue
src/components/user/: AvatarCropper.vue  UserProfileModal.vue
src/router/: index.ts
src/stores/: clipboardStore.ts  editorStore.ts  noteStore.ts  userStore.ts
src/styles/: main.css
src/utils/: request.ts
src/views/: MainView.vue  ToolsView.vue
