[package]
name = "mynote"
version = "1.0.0"
description = "MyNote - Professional Note Taking App"
authors = ["MyNote Team"]
edition = "2021"

#[lib]
#name = "mynote_lib"
#crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mynote"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default", "devtools", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# 本地数据库 - SQLite
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# 剪贴板访问（纯本地）
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

# Windows 特定依赖（统一使用 windows crate）
[target.'cfg(windows)'.dependencies]
once_cell = "1.19"
windows = { version = "0.52", features = [
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
